fix: bad display of content and can't send the message through Send button - EXO-71791 (#739)
Before this change, on chat drawer, paste a copied link 2 times with no break line and clicking outside the text area makes the message impossible to be sent as the text overlaps with the button +.
After this change, the message does not cross the text area border and can be sent.

(cherry picked from commit 9465f226ea042fb57511d37d775f9e371a637e84)

--- a/application/src/main/webapp/css/components/messageComposer.less
+++ b/application/src/main/webapp/css/components/messageComposer.less
@@ -47,6 +47,8 @@
   #messageComposerArea {
     width: 100% !important;
     padding: 3px 10px;
+    line-break: anywhere !important;
+    overflow-y: auto !important;
   }
   #messageComposerArea:focus {
     outline: none;
